--- a/index.html
+++ b/index.html
@@ -7,19 +7,16 @@
     <title>Github</title>
 </head>
 <body>
-<<<<<<< HEAD
-   <div>
-       <h3>Titulo</h3>
-       <img src="" alt="Imagen de gato">
-   </div>
-=======
     <ul>
         <li><a href="">Inicio</a></li>
         <li><a href="">Productos</a></li>
         <li><a href="">Contacto</a></li>
         <li><a href="">Ubicacion</a></li>
     </ul>
->>>>>>> rama
+
+    <section>
+        <h4>Nuevos Cambios</h4>
+    </section>
 
 </body>
 </html>
